fix(encounter): address locale validation and review findings
Signed-off-by: Michael Yingbull <michael@maplecreekmedical.ca>